k8s/templates/accountservice-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hw10-accountservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw10-accountservice
  template:
    metadata:
      labels:
        app: hw10-accountservice
    spec:
      containers:
        - name: hw10-accountservice
          image: dmitriyburets1982/hw10-accountservice:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /accountservice/health
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /accountservice/health
              port: 8080
            initialDelaySeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hw10-accountservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: hw10-accountservice
  ports:
  - name: hw10-accountservice
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hw10-accountservice-service
spec:
  type: NodePort
  selector:
    app: hw10-accountservice
  ports:
    - name: hw10-accountservice
      protocol: TCP
      port: 80
      targetPort: 8080
