k8s/templates/notificationservice-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hw10-notificationservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw10-notificationservice
  template:
    metadata:
      labels:
        app: hw10-notificationservice
    spec:
      containers:
        - name: hw10-notificationservice
          image: dmitriyburets1982/hw10-notificationservice:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /notificationservice/health
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /notificationservice/health
              port: 8080
            initialDelaySeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hw10-notificationservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: hw10-notificationservice
  ports:
  - name: hw10-notificationservice
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hw10-notificationservice-service
spec:
  type: NodePort
  selector:
    app: hw10-notificationservice
  ports:
    - name: hw10-notificationservice
      protocol: TCP
      port: 80
      targetPort: 8080
