k8s/templates/orderservice-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hw10-orderservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw10-orderservice
  template:
    metadata:
      labels:
        app: hw10-orderservice
    spec:
      containers:
        - name: hw10-orderservice
          image: dmitriyburets1982/hw10-orderservice:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /orderservice/health
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /orderservice/health
              port: 8080
            initialDelaySeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hw10-orderservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: hw10-orderservice
  ports:
  - name: hw10-orderservice
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hw10-orderservice-service
spec:
  type: NodePort
  selector:
    app: hw10-orderservice
  ports:
    - name: hw10-orderservice
      protocol: TCP
      port: 80
      targetPort: 8080
