k8s/templates/userservice-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: hw10-userservice-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hw10-userservice
  template:
    metadata:
      labels:
        app: hw10-userservice
    spec:
      containers:
        - name: hw10-userservice
          image: dmitriyburets1982/hw10-userservice:latest
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /userservice/health
              port: 8080
            initialDelaySeconds: 5
          livenessProbe:
            httpGet:
              path: /userservice/health
              port: 8080
            initialDelaySeconds: 5
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hw10-userservice-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: hw10-userservice
  ports:
  - name: hw10-userservice
    protocol: TCP
    port: 80
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hw10-userservice-service
spec:
  type: NodePort
  selector:
    app: hw10-userservice
  ports:
    - name: hw10-userservice
      protocol: TCP
      port: 80
      targetPort: 8080
